attempt at flicker on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body{
 }
 
 *{
+    backface-visibility: hidden;
         /*position: relative;*/
     box-sizing: border-box;
     font-size: 16px;
